# Tagger

./: Cargo.toml  README.md  TODO.txt
assets/: icon.icns  icon.kra  icon.kra~
src/: file.rs  loader.rs  main.rs  search.rs  style.rs
