[package]
name = "tagger"
version = "0.1.0"
edition = "2024"
authors = ["Luke Siegel", "Dasher"]

[dependencies]
futures = "0.3.31"
iced = {version = "0.14.0", features = ["image"]}
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.17"
image = "0.25"
opener = {version="0.8.3", features=["reveal"]}